--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - lealearnstocode/with-rust:
           steps:
             - run: |
-                just check
+                just ci-check
                 just test
 orbs:
   lealearnstocode: lealearnstocode/build-orb@0.2.0
